[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-incubator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.0.2",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.9",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.2",
]
